@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-06-15T01:12:06Z",
+  "timestamp" : "2025-06-16T01:07:10Z",
   "count_outdated" : 541,
   "uniques_outdated" : 367,
-  "count" : 547,
-  "uniques" : 373,
+  "count" : 548,
+  "uniques" : 374,
   "clones" : [
     {
       "timestamp": "2025-06-07T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2025-06-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
